# google-sheet-etl-project

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  init_airflow.sh  pyproject.toml  requirements.txt
.github/workflows/: run-linter.yaml  run-tests.yaml
config/: airflow.cfg
dags/: etl_main_trigger.py  test.py
functions/: extract_data.py  load_data.py  transform_data.py
tests/functions/: test_transform_data.py
utils/: api_request.py  constanst.py  constants.py  db.py  google_drive.py
